Added Contact Information

--- a/index.html
+++ b/index.html
@@ -256,7 +256,26 @@
     </div>
     </div>
 </section>
-    
+
+<!------contact-->
+    <section class="contact">
+        <div class="contact-text">
+            <h2>Contact <span>Me</span></h2>
+            <h4>Let's work Together</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores commodi ab, mollitia labore maxime fuga numquam provident in obcaecati, accusamus 
+                error rem dolorum nulla saepe iusto, eum cupiditate illum non.</p>
+
+                <div class="contact-list">
+                    <li><i class='bx bx-send' ></i> jarshanjauffar@gmail.com</li>
+                    <li><i class='bx bx-phone' ></i>0761572763</li>
+                </div>
+        </div>
+    </section>
+
+
+
+
+
 <script src="javascript.js"></script>
 </body>
 </html>
