Added contact icons

--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
                     <li><i class='bx bx-send' ></i> jarshanjauffar@gmail.com</li>
                     <li><i class='bx bx-phone' ></i>0761572763</li>
                 </div>
+
+                <div class="contact-icons">
+                    <a href=""><i class='bx bxl-facebook' ></i></a>
+                    <a href=""><i class='bx bxl-instagram' ></i></a>
+                    <a href=""><i class='bx bxl-linkedin-square' ></i></a>
+                    <a href=""><i class='bx bxl-github' ></i></a>
+                </div>
         </div>
     </section>
 
