--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Portfolio.</a>
 
         <nav class="navbar">
 
-            <a href='#' style="--i:1;" class="active">Home</a>
-            <a href='#' style="--i:2;">About</a>
-            <a href='#' style="--i:3;">Skills</a>
-            <a href='#' style="--i:4;">Portfolio</a>
-            <a href='#' style="--i:5;">Contact</a>
+            <a href='#home' style="--i:1;" class="active">Home</a>
+            <a href='#about' style="--i:2;">About</a>
+            <a href='#services' style="--i:3;">Skills</a>
+            <a href='#skills' style="--i:4;">Portfolio</a>
+            <a href='#contact' style="--i:5;">Contact</a>
 
         </nav>
     </header>
