--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <section class="home">
         <div class="home-content">
+            
             <h3>Hello, It's Me</h3>
             <h1>Mohamed Jarshan</h1>
             <h3>And I'm a <span class="text"></span></h3>
@@ -41,11 +42,12 @@
                 <a href="#" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
                 <a href="#" style="--i:10"><i class='bx bxl-tiktok'></i></a>
             </div>
-            <a href="#" class="btn-box">More About Me</a>
+            <a href="#" class="btn-box">Download CV</a>
+</div>
 
-        </div>
-
-        <span class="home-imgHover"></span>
+       <div class="home-img">
+        <img src="Images/Jar3.png" alt="">
+       </div> 
     </section>
 
 
@@ -53,7 +55,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="Images/Jar1.jpg">
+            <img src="Images/Jar3.png">
         </div>
 
         <div class="about-text">
@@ -64,9 +66,7 @@
                 adipisicing elit. Voluptate eveniet odit qui necessitatibus quod assumenda doloremque! Eos ab cupiditate
                 et! <br>Veritatis nemo excepturi quasi
                 repudiandae magni adipisci similique omnis dic I'm a Software Engineer with extensive experience for
-                over 3 years.<br>Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Voluptate eveniet odit qui necessitatibus quod assumenda doloremque! Eos ab cupiditate
-                et! <br>Veritatis nemo excepturi quasi
+                over 3 years.<br>Veritatis nemo excepturi quasi
                 repudiandae magni adipisci similique omnis di</p>
 
             <a href="#" class="btn-box">More About Me</a>
@@ -74,8 +74,9 @@
     </section>
 
     <!---------Services-->
+<!------
 
-    <section>
+   <section>
         <div class="services" id="services">
             <div class="container">
                 <h1 class="sub-title">My <span>Services</span></h1>
@@ -127,13 +128,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>    ----->
 
     <!--------Skills-->
 
-    <h1 class="sub-title">My <span>Skills</span></h1>
+    
 
     <section>
+        <h1 class="sub-title">My <span>Skills</span></h1>
         <div class="container1" id="Skills">
             <h1 class="heading1">Technical Skills</h1>
             <div class="Technical-bars">
@@ -187,7 +189,7 @@
         </div>
         </div>
 
-        <div class="container1">
+      <!------- <div class="container1">
             <h1 class=heading1> Professional Skills</h1>
             <div class="radial-bars">
 
@@ -229,7 +231,7 @@
 
         </div>
 
-        </div>
+        </div>      ------->
     </section>
 
     <!-------portfolio-->
