--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="home">
         <div class="home-content">
-            
+
             <h3>Hello, It's Me</h3>
             <h1>Mohamed Jarshan</h1>
             <h3>And I'm a <span class="text"></span></h3>
@@ -43,11 +43,11 @@
                 <a href="#" style="--i:10"><i class='bx bxl-tiktok'></i></a>
             </div>
             <a href="#" class="btn-box">Download CV</a>
-</div>
+        </div>
 
-       <div class="home-img">
-        <img src="Images/Jar3.png" alt="">
-       </div> 
+        <div class="home-img">
+            <img src="Images/Jar3.png" alt="">
+        </div>
     </section>
 
 
@@ -74,7 +74,7 @@
     </section>
 
     <!---------Services-->
-<!------
+    <!------
 
    <section>
         <div class="services" id="services">
@@ -132,29 +132,23 @@
 
     <!--------Skills-->
 
-    
+
 
     <section>
         <h1 class="sub-title">My <span>Skills</span></h1>
         <div class="container1" id="Skills">
-            <h1 class="heading1">Technical Skills</h1>
-            <div class="Technical-bars">
+            <!----    <h1 class="heading1">Technical Skills</h1>  --->
 
-                <div class="bar"> <i class='bx bxl-html5' style='color:#c95d2e'></i>
-                    <div class="info">
-                        <span>HTML</span>
-                    </div>
-                    <div class="progress-line html">
-                        <span></span>
-                    </div>
+            <div class="bar"> <i class='bx bxl-html5' style='color:#c95d2e'></i>
+                <div class="info">
+                    <span>HTML</span>
                 </div>
+
+
 
                 <div class="bar"> <i class='bx bxl-css3' style='color:#147bbc'></i>
                     <div class="info">
                         <span>CSS</span>
-                    </div>
-                    <div class="progress-line css">
-                        <span> </span>
                     </div>
                 </div>
 
@@ -162,34 +156,28 @@
                     <div class="info">
                         <span>Javascript</span>
                     </div>
-                    <div class="progress-line Javascript">
-                        <span></span>
-                    </div>
+
                 </div>
 
                 <div class="bar"> <i class='bx bxl-python' style='color:#c32ec9'></i>
                     <div class="info">
                         <span>Python</span>
                     </div>
-                    <div class="progress-line python">
-                        <span></span>
-                    </div>
+
                 </div>
 
                 <div class="bar"> <i class='bx bxl-react' style='color:#69bcbc'></i>
                     <div class="info">
                         <span>React</span>
                     </div>
-                    <div class="progress-line react">
-                        <span></span>
-                    </div>
+
                 </div>
 
             </div>
         </div>
         </div>
 
-      <!------- <div class="container1">
+        <!------- <div class="container1">
             <h1 class=heading1> Professional Skills</h1>
             <div class="radial-bars">
 
