--- a/index.html
+++ b/index.html
@@ -136,44 +136,19 @@
 
     <section>
         <h1 class="sub-title">My <span>Skills</span></h1>
-        <div class="container1" id="Skills">
-            <!----    <h1 class="heading1">Technical Skills</h1>  --->
+        <div class="container1" id="skills">
 
-            <div class="bar"> <i class='bx bxl-html5' style='color:#c95d2e'></i>
-                <div class="info">
-                    <span>HTML</span>
-                </div>
-
-
-
-                <div class="bar"> <i class='bx bxl-css3' style='color:#147bbc'></i>
-                    <div class="info">
-                        <span>CSS</span>
-                    </div>
-                </div>
-
-                <div class="bar"> <i class='bx bxl-javascript' style='color:#b0bc1e'></i>
-                    <div class="info">
-                        <span>Javascript</span>
-                    </div>
-
-                </div>
-
-                <div class="bar"> <i class='bx bxl-python' style='color:#c32ec9'></i>
-                    <div class="info">
-                        <span>Python</span>
-                    </div>
-
-                </div>
-
-                <div class="bar"> <i class='bx bxl-react' style='color:#69bcbc'></i>
-                    <div class="info">
-                        <span>React</span>
-                    </div>
-
-                </div>
-
-            </div>
+            <i class='bx bxl-html5' style='color:#c95d2e'></i>
+            <i class='bx bxl-css3' style='color:#147bbc'></i>
+            <i class='bx bxl-javascript' style='color:#b0bc1e'></i>
+            <i class='bx bxl-python' style='color:#c32ec9'></i>
+            <i class='bx bxl-react' style='color:#69bcbc'></i>
+            <i class='bx bxl-java' style='color:#ed7615' ></i>
+            <i class='bx bxl-nodejs' style='color:#15ed4f'></i>
+            <i class='bx bxl-redux' style='color:#792e77'></i>
+            <i class='bx bxl-mongodb' style='color:#105b24' ></i>
+            
+        </div>
         </div>
         </div>
 
