Icon colour changed

--- a/index.html
+++ b/index.html
@@ -154,20 +154,19 @@
 
             <div class="container2">
 
-                <i class='bx bxl-visual-studio' style='color:#397080' ></i>
-                <i class='bx bxl-android' style='color:#397080'></i>
-                <i class='bx bxl-typescript' style='color:#397080'></i>
-                <i class='bx bxl-aws' style='color:#397080'></i>
-                <i class='bx bxl-php' style='color:#397080'></i>
-                <i class='bx bxl-flutter' style='color:#397080'></i>
-                <i class='bx bxl-adobe' style='color:#397080'></i>
-                <i class='bx bxl-figma' style='color:#397080'  ></i>
-                <i class='bx bxl-angular' style='color:#397080'></i>
-                <i class='bx bxl-sass' style='color:#397080'></i>
-                <i class='bx bxl-git' style='color:#397080'></i>
-                <i class='bx bxl-firebase' style='color:#397080'></i>
-                <i class='bx bxl-spring-boot' style='color:#397080' ></i>
-                <i class='bx bxl-github' style='color:#397080'></i>
+                <i class='bx bxl-visual-studio' style='color:#2925b3' ></i>
+                <i class='bx bxl-android' style='color:#167441'></i>
+                <i class='bx bxl-typescript' style='color:#3e30bb'></i>
+                <i class='bx bxl-aws' style='color:#da8712'></i>
+                <i class='bx bxl-php' style='color:#3d1451'></i>
+                <i class='bx bxl-flutter' style='color:#4039c3'></i>
+                <i class='bx bxl-figma' style='color:#df4d14'  ></i>
+                <i class='bx bxl-angular' style='color:#cd1919'></i>
+                <i class='bx bxl-sass' style='color:#db2ead'></i>
+                <i class='bx bxl-git' style='color:#d76048'></i>
+                <i class='bx bxl-firebase' style='color:#8a3500'></i>
+                <i class='bx bxl-spring-boot' style='color:#238a38' ></i>
+                <i class='bx bxl-github' style='color:#020607'></i>
          
             </div>
        
