--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             
         </div>
         
-            <h1>My <span>Tools</span></h1>
+            <h1 class="sub-title1"><span>Tools</span> I use</h1>
 
             <div class="container2">
 
