Linking with github

--- a/index.html
+++ b/index.html
@@ -130,31 +130,31 @@
             <div class="row">
                 <img src="Images/SafeGuard1.png" alt="Project 1">
                 <div class="layer">
-                    <h5>UI/UX Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, atque eius. aspernatur ab deserunt unde sed neque aliquam obcaecati?</p>
-                    <a href="#"><i class='bx bx-link-external' style="color: rgb(38, 67, 94)"></i></a>
+                    <h5>SafeGuard</h5>
+                    <p>SafeGuard is an Android App for Accident Detection and Emergency Alert. Developed using Java, xml, firebase in Android Studio.</p>
+                    <a href="https://github.com/Jarshan/SafeGuard"><i class='bx bx-link-external' style="color: rgb(38, 67, 94)"></i></a>
                 </div>
             </div>
 
             <div class="row">
                 <img src="Images/shelflink.png" alt="Project 2">
                 <div class="layer">
-                    <h5>UI/UX Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, atque eius. aspernatur ab deserunt unde sed neque aliquam obcaecati?</p>
-                    <a href="#"><i class='bx bx-link-external' style="color: rgb(38, 67, 94)"></i></a>
+                    <h5>ShelfLink</h5>
+                    <p>ShelfLink is an efficient e-library management system developed using Java and MySQL in Apache NetBeans. </p>
+                    <a href="https://github.com/Jarshan/ShelfLink"><i class='bx bx-link-external' style="color: rgb(38, 67, 94)"></i></a>
                 </div>
             </div>
 
             <div class="row">
                 <img src="Images/Booktique.png" alt="Project 3">
                 <div class="layer">
-                    <h5>UI/UX Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, atque eius. aspernatur ab deserunt unde sed neque aliquam obcaecati?</p>
-                    <a href="#"><i class='bx bx-link-external' style="color: rgb(38, 67, 94)"></i></a>
+                    <h5>Booktique</h5>
+                    <p>Booktique is a dynamic web application that allows users to manage their personal book collection. Developed using HTML, CSS, and JavaScript.</p>
+                    <a href="https://github.com/Jarshan/Booktique"><i class='bx bx-link-external' style="color: rgb(38, 67, 94)"></i></a>
                 </div>
             </div>
 
-            
+
         </div>
     </div>
 </section>
@@ -164,9 +164,8 @@
         <div class="contact-text" id="contact">
             <h2>Contact <span>Me</span></h2>
             <h4>Let's work Together</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores commodi ab, mollitia labore maxime fuga
-                numquam provident in obcaecati, accusamus
-                error rem dolorum nulla saepe iusto, eum cupiditate illum non.</p>
+            <p>If you’re interested in collaborating, have any inquiries, or just want to connect, feel free to reach out! 
+                I’m always excited about new opportunities and interesting projects. Let’s get in touch!</p>
 
             <div class="contact-list">
                 <li><i class='bx bx-send'></i> jarshanjauffar@gmail.com</li>
