--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio.</a>
+        <a href="#" class="logo"><img src="Images/Jarshan.png"></a>
 
         <nav class="navbar">
 
@@ -52,7 +52,7 @@
     </section>
 
 
-    <!------about---------->
+    <!------about---------------------------------------------------------------------------------->
 
     <section class="about" id="about">
         <div class="about-img">
@@ -77,7 +77,7 @@
 
 
 
-    <!--------Skills-->
+    <!--------Skills--------------------------------------------------------------------------------------------->
 
     <section class="Skills" id="skills">
         <h1 class="sub-title">My <span>Skills</span></h1>
@@ -126,7 +126,7 @@
 
     </section>
 
-    <!-------projects-->
+    <!-------projects------------------------------------------------------------------------------------->
 
     <section class="Portfolio" id="project">
         <div class="main-text">
@@ -171,7 +171,8 @@
         </div>
     </section>
 
-    <!------contact-->
+    <!------contact----------------------------------------------------------------------------------------------->
+
     <section class="contact">
         <div class="contact-text" id="contact">
             <h2>Contact <span>Me</span></h2>
